--- a/project/arm/SC0X.uvprojx
+++ b/project/arm/SC0X.uvprojx
@@ -846,6 +846,11 @@
               <FileType>8</FileType>
               <FilePath>..\..\bsp\stm32f40x\cpptools\PT100.cpp</FilePath>
             </File>
+            <File>
+              <FileName>ScFailure.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\bsp\stm32f40x\cpptools\ScFailure.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
